force-app/main/default/objects/Process_Component_Task_Detail__c/Process_Component_Task_Detail__c.object-meta.xml
<CustomObject>
    <label>Process Component Task Detail</label>
    <nameField>
        <label>Process Component Task Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Component Task Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>