force-app/main/default/objects/Process_Component_Task_Detail__c/fields/Process_Path_Task_DetailId__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Task_DetailId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Path Task Detail</label>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Component Task Details (Process Path Task Detail)</relationshipLabel>
    <relationshipName>Process_Component_Task_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>