force-app/main/default/objects/Process_Component_Task_Detail__c/fields/Process_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Task_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Task Detail</label>
    <referenceTo>Process_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Component Task Details</relationshipLabel>
    <relationshipName>Process_Component_Task_Details</relationshipName>
    <type>Lookup</type>
</CustomField>